# VitaMTP

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  database.c  libvitamtp.pc.in  opencma.c  opencma.h  test.c  test2.c  test_data.h  utilities.c  vitacma.c  vitamtp.c  vitamtp.h  xmlparsing.c
VitaMTP.xcodeproj/: project.pbxproj
debian/: control  copyright  vitamtp1.install  vitamtp1.udev
doc/: Doxyfile.in  Makefile.am  mainpage.h
src/: .gitignore  Makefile.am  database.c  datautils.c  device-flags.h  device.c  opencma.c  opencma.h  ptp.c  ptp.h  usb.c  utilities.c  vitacma.c  vitamtp.c  vitamtp.h  wireless.c  xmlparsing.c
src/linux/: Makefile.am
